feat: register table endpoint
